8 categories scraped - Accessibility - Alerts & Updates - Appearance - Bookmarks - Download Management - Feeds, News & Blogging - Games & Entertainment - Language Support

--- a/browser_extensions.ipynb
+++ b/browser_extensions.ipynb
@@ -92,13 +92,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "becd3056",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extension_requests.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3becb596-1e76-4d43-b87b-c47a22eeb835",
    "metadata": {},
    "outputs": [],
    "source": [
-    "extension_requests = {} # dictionary for soup\n",
+    "# extension_requests = {} # dictionary for soup\n",
     "for index,(key,links) in enumerate(extension_dict.items()):\n",
-    "    if index < 2: # reduced the value due to memory \n",
+    "    if index > 3: # reduced the value due to memory \n",
     "        for link in extension_dict[key]:\n",
     "            try:\n",
     "                res = requests.get(link).content\n",
@@ -109,12 +119,46 @@
     "                extension_requests[key] = []\n",
     "                res = requests.get(link).content\n",
     "                soup = BeautifulSoup(res,'html.parser')\n",
-    "                extension_requests[key].append(soup)\n"
+    "                extension_requests[key].append(soup)\n",
+    "    print(f'{index} is done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "6d1716db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kian Schmalenbach'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3d41a24c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def append_to_list(list_name,value):\n",
+    "    if x.select(value): # gets extension bagde \n",
+    "        list_name.append(x.select(value)[0].get_text())\n",
+    "    else:\n",
+    "        list_name.append(None) # return None if the badge is not available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "57a94598-4dbd-4bf3-a03a-e4ea4a4ed4a9",
    "metadata": {},
    "outputs": [],
@@ -130,20 +174,26 @@
     "    for index,soup in enumerate(extension_requests[category]):\n",
     "        for x in soup.select('.SearchResult-wrapper'):\n",
     "            category_list.append(category) # gets extension's category name\n",
-    "            user_count.append(x.select('span.SearchResult-users-text')[0].getText()) # gets user count\n",
-    "            names.append(x.select('a.SearchResult-link')[0].get_text()) # gets extension name\n",
-    "            description.append(x.select('.SearchResult-summary')[0].get_text()) # gets extension summary\n",
-    "            author.append(x.select('h3.SearchResult-author')[0].get_text()) # gets extension author\n",
-    "            rating.append(x.select('.SearchResult-rating')[0].get_text()) # gets extension average rating\n",
-    "            if x.select('.PromotedBadge-label--recommended'): # gets extension bagde \n",
-    "                badge.append(x.select('.PromotedBadge-label--recommended')[0].get_text())\n",
-    "            else:\n",
-    "                badge.append(None) # return None if the badge is not available"
+    "            append_to_list(user_count,'span.SearchResult-users-text') # gets user count\n",
+    "            append_to_list(names,'a.SearchResult-link') # gets extension name\n",
+    "            append_to_list(description,'.SearchResult-summary') # gets extension summary\n",
+    "            append_to_list(author,'h3.SearchResult-author')  # gets extension author\n",
+    "            append_to_list(rating,'.SearchResult-rating') # gets extension average rating\n",
+    "            append_to_list(badge,'.PromotedBadge-label--recommended') # gets extension badge \n",
+    "            # user_count.append(x.select('span.SearchResult-users-text')[0].getText()) \n",
+    "            # names.append(x.select('a.SearchResult-link')[0].get_text()) \n",
+    "            # description.append(x.select('.SearchResult-summary')[0].get_text()) \n",
+    "            # author.append(x.select('h3.SearchResult-author')[0].get_text())\n",
+    "            # rating.append(x.select('.SearchResult-rating')[0].get_text()) \n",
+    "            # if x.select('.PromotedBadge-label--recommended'): \n",
+    "            #     badge.append(x.select('.PromotedBadge-label--recommended')[0].get_text())\n",
+    "            # else:\n",
+    "            #     badge.append(None) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ae499eb6-4fd0-43b0-817e-8a72bbb56eb6",
    "metadata": {},
    "outputs": [],
@@ -157,12 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "6a91aa9a-d390-483c-9451-78ee9c09e4cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1['category'].value_counts()"
+    "df1.to_csv('extension.csv')"
    ]
   },
   {
@@ -204,12 +254,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "id": "8fbdc915",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>ratings</th>\n",
+       "      <th>description</th>\n",
+       "      <th>author</th>\n",
+       "      <th>badge</th>\n",
+       "      <th>users</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3649</th>\n",
+       "      <td>Hebrew Tooltip Translation</td>\n",
+       "      <td>Appearance</td>\n",
+       "      <td>Rated 5 out of 5</td>\n",
+       "      <td>Translate Hebrew to English and English to Heb...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>104 users</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            name    category           ratings  \\\n",
+       "3649  Hebrew Tooltip Translation  Appearance  Rated 5 out of 5   \n",
+       "\n",
+       "                                            description author badge  \\\n",
+       "3649  Translate Hebrew to English and English to Heb...   None  None   \n",
+       "\n",
+       "          users  \n",
+       "3649  104 users  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[df1['author'].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "145ead7d-6d22-4fde-bc71-676afdef4ef3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accessibility\n",
+      "Alerts & Updates\n",
+      "Appearance\n",
+      "Bookmarks\n",
+      "Download Management\n",
+      "Feeds, News & Blogging\n",
+      "Games & Entertainment\n",
+      "Language Support\n"
+     ]
+    }
+   ],
    "source": [
-    "df1[df1.duplicated()]"
+    "for x in df1.category.unique().tolist():\n",
+    "    print(x)"
    ]
   },
   {
